Fix buggy line wrap by using negative margins

--- a/styles/likely.styl
+++ b/styles/likely.styl
@@ -169,11 +169,11 @@ colorize('odnoklassniki', #f6903b);
 .likely {
   font-size: 14px;
   line-height: 20px;
-  margin-bottom: -14px;
+  margin: 0 -3px -14px;
   .likely__widget {
     border-radius: 3px;
     height: 22px;
-    margin: 0 7px 14px;
+    margin: 0 3px 14px;
   } 
   .likely__icon {
     width: 22px; height: 22px;
@@ -195,11 +195,11 @@ colorize('odnoklassniki', #f6903b);
 .likely-big {
   font-size: 18px;
   line-height: 28px;
-  margin-bottom: -18px;
+  margin: 0 -4px -18px;
   .likely__widget {
     border-radius: 4px;
     height: 32px;
-    margin: 0 9px 18px;
+    margin: 0 4px 18px;
   } 
   .likely__icon {
     width: 32px; height: 32px;
@@ -221,11 +221,11 @@ colorize('odnoklassniki', #f6903b);
 .likely-small {
   font-size: 12px;
   line-height: 14px;
-  margin-bottom: -12px;
+  margin: 0 -2px -12px;
   .likely__widget {
     border-radius: 2px;
     height: 18px;
-    margin: 0 6px 12px;
+    margin: 0 2px 12px;
   } 
   .likely__icon {
     width: 18px; height: 18px;
@@ -243,11 +243,3 @@ colorize('odnoklassniki', #f6903b);
     height: 12px;
   }
 }
-
-  .likely__widget:first-child {
-    margin-left: 0;
-  }
-  .likely__widget:last-child {
-    margin-right: 0;
-  }
-
